/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -17,6 +17,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ak mužikatoi — kutnä haumeh aidatoi.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Ei kaik mehed olgoi, kudambad kadjoid kandištas.''
+* ''Ei nimi mest pahenda, a mez' nimen.''
 * ''Ei severz' mehid, kuverz' kadjoid.''
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Küläd eile koiratomad, mad eile mehetomad.''
