*Empty MediaWiki Message*

--- a/Rusked_muju.mw
+++ b/Rusked_muju.mw
@@ -106,11 +106,11 @@ Fail:Sunset Starnberger See.jpg|[[Päiväine|Päiväižen]] [[laskm]]
 </gallery>
 </center>
 
-== Rusttha mujuhu sidotud tärtused ==
+== Rusttha mujuhu sidodud tärtused ==
 * [[Rusked meri]]
 * [[Rusked torg]] Moskvas
 
-== Rusttha mujuhu sidotud vepsän muštatišed da ozoitesed ==
+== Rusttha mujuhu sidodud vepsän muštatišed da ozoitesed ==
 === Muštatiž ===
 <blockquote>
 * ''Pahk — se-žo nahk, vaiše rusktembahk.''
