--- a/Nahk.mw
+++ b/Nahk.mw
@@ -1,6 +1,11 @@
 {{1000}}{{A10000}}
-[[Fail:Menschliche Haut.jpg|thumb|right|250px|Ristitun nahk]]
+[[Fail:Menschliche Haut.jpg|thumb|right|250px|Ristitun nahkan pind]]
 '''Nahk''' om [[sel'grodaižed|sel'grodaižiden]] organizman irdkatuz, kudamb kaičeb hibjad painusišpäi i ühtneb [[hengaiduz|hengaidushe]], [[termoreguläcii|termoreguläcijaha]], vajehtamižihe da äjihe toižihe processoihe. 
+
+== Nahkaha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Pahk — se-žo nahk, vaiše rusktembahk.''
+</blockquote>
 
 {{stub}}
 [[Kategorii:Ristitun hibj]]
