/* Tervhudehe sidodud vepsän muštatišed */ +

--- a/Tervhuz.mw
+++ b/Tervhuz.mw
@@ -116,6 +116,7 @@ Tegendad tervhen elonmahtusen mödhe pättas üht problemad — individualižen 
 
 == Tervhudehe sidodud vepsän muštatišed ==
 <blockquote>
+* ''Mas magadad — tegese nell'kümne pahut.''
 * ''Pän kibištab, perskele kebnemb om.''
 * ''Tervhuz om kal'hemb kuldad.''
 * ''Tervhut ed osta.''
