/* Pajoho sidodud vepsän muštatišed */ +

--- a/Pajo.mw
+++ b/Pajo.mw
@@ -10,9 +10,11 @@ Pajo voib edestadas kut ühtel [[pajatai|pajatajal]], muga [[hor]]al-ki. Pajatad
 
 == Pajoho sidodud vepsän muštatišed ==
 <blockquote>
+* ''Koumhesai pap' pajatab.''
 * ''Mitte linduine, mugoi(ne) i pajoine.''
 * ''Pahal lindul i pajod pahad oma.''
 * ''Pajata hot' karzn'as ka kuldas, voika hot' pertin päl ka ei kulgoi.''
+* ''Pajatada om paremb ühtes, a pagišta eriži.''
 </blockquote>
 
 == Homaičendad ==
