--- a/Sana.mw
+++ b/Sana.mw
@@ -12,6 +12,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Ala pagiže min tedad, a teda min pagižed.''
 * ''Ei sur' sana sud haugoi.''
 * ''Paha kel' pahan i pagižeb.''
+* ''Pajatada om paremb ühtes, a pagišta eriži.''
 * ''Sanal voib mez' rikta.''
 * ''Sanoišpäi leibäd ed pašta.''
 * ''Sanub, kuti haugol pähä iškeb.''
