/* Lämoihe sidodud vepsän muštatiž */ +

--- a/Lämoi.mw
+++ b/Lämoi.mw
@@ -20,6 +20,7 @@ Eziauguižešti ottihe lämoid kävutamižhe savun samižen täht lendajid gaved
 == Lämoihe sidodud vepsän muštatiž ==
 <blockquote>
 * ''Lämoid savuta ei olele.''
+* ''Palanu lämoid ei varaida, a upnu — vet.''
 </blockquote>
 
 == Homaičendad ==
