/* Mahushe sidotud vepsän muštatišed da ozoitesed */

--- a/Mahuz.mw
+++ b/Mahuz.mw
@@ -13,7 +13,7 @@ Mineraližed komponentad ottas mahusen 50..60 % mülün mödhe i 90..97 procenth
 * ''Kezandma'' — jättud ma aigaks.
 * ''Kurdiž ma'' — man aluine, alamahuz.
 
-== Mahushe sidotud vepsän muštatišed da ozoitesed ==
+== Mahushe sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Eile rad taivhas, a om mas.''
