--- a/Olud.mw
+++ b/Olud.mw
@@ -8,6 +8,11 @@ Torhuz tehmaha olut: [[ozr]], [[nižu]] vai [[nagriž]], [[humal]], [[sepad]]. P
 
 Kaik om läz tuhad oluden sortuid. Erazvuiččiden toižendoiden maguozutajad erinedas lujas. Väghine olud mülütab 8,5..14 % etilspirtad, välläd sortud — 1..2 %.
 
+== Oludhe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Olut keitad, a papid savul-ki ed jo aja.''
+</blockquote>
+
 == Irdkosketused ==
 * [http://vepsian.krc.karelia.ru/text/?text_id=132 Kut mijou oludon keittas // Vepsän kelen korpus. — #132.]
 * [http://vepsian.krc.karelia.ru/text/?text_id=145 Kut oludon keittas // Vepsän kelen korpus. — #145.]
