--- a/.am.mw
+++ b/.am.mw
@@ -1,4 +1,7 @@
+[[Fail:Logo-am-official-isoc.svg|thumb|right|250px|Domenan logotip]]
 '''.am''' om [[Armenii|Armenijan]] [[DNS|Internet-domen]]. Se om avaitud [[1994. voz'|1994]]-nden voden 26. päiväl elokud.<ref>[http://iana.org/domains/root/db/am.html IANA — .am Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+
+Registracii om lasktud kahtendel tazopindal. Mitte taht ristit mail'mas voib registriruida domennimed .am-zonas, no registrator kodvib ezipakitoitust koume päiväd i sille sab kel'ta registracijad süiden ümbrikirjutandata. Maksmine tehnižes pid'oitelendas tose kahteks vodeks.
 
 == Homaičendad ==
 <references />
@@ -6,6 +9,7 @@
 == Irdkosketused ==
 * [http://www.amnic.net/ Domenan sait — Armenia Network Information Centre by Internet Society of Armenia, Non-governmental organization (Armenijan verkoiden informacine keskuz, ''amnic.net'', ohjandab civiline «Armenijan Internet-kund»-organizacii).] {{ref-en}}
 * [http://iana.org/domains/root/db/am.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.am}}
 
 {{CcTLD}}
 
