--- a/Golub_Marina.mw
+++ b/Golub_Marina.mw
@@ -2,7 +2,14 @@
 | изображение = Marina Golub-22-4! by Alexey Nikishin 1.jpg
 | описание изображения = Marina Golub vl 2011
 }}
-'''Marina Grigor'jevna Golub''' ({{lang-ru|Марина Григорьевна Голуб}}; sünd. [[10. tal'vku]] [[1957]], [[Moskv]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[9. reduku]] [[2012]], sigä-žo, [[Venäma]]) oli nevondkundaline i venämalaine aktris da TV-vedai.
+'''Marina Grigor'jevna Golub''' ({{lang-ru|Марина Григорьевна Голуб}}; sünd. [[8. tal'vku]] [[1957]], [[Moskv]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[9. reduku]] [[2012]], sigä-žo, [[Venäma]]) oli nevondkundaline i venämalaine teatran da kinon aktris, TV-vedai. Venälaižen Federacijan arvostadud artist (1995). Vändi rolid 78 fil'mas vspäi 1980.
+
+== Biografii ==
+Golub oli sündnu radnikoičijoiden kanzha. Openui Moskvan keskškolas nomer 33 (1965−1975). Vl 1979 oli pästnus [[Moskvan čomamahtoine akademine teatr A.P. Čehovan nimed|MHAT:an]] školas-studijaspäi (Viktor Monükovan kurs).
+
+Vll 1979−1981 Marina Golub radoi Moskoncertas. Vspäi 1981 vhesai 1987 naine radnikoiči Arkadii Raikinan Miniatüroiden teatras, sid' läksi radmaha Moskvan «Šalom»-teatras. Vspäi 2002 Golub oli ranu MHAT:as.
+
+Naine oli lähtnu mehele koume kerdad, tütär om sündnu naimiželos.
 
 == Homaičendad ==
 <references/>
