--- a/Odžibve_(rahvaz).mw
+++ b/Odžibve_(rahvaz).mw
@@ -2,7 +2,11 @@
 [[Fail:Hombres ojibwe.jpg|thumb|right|250px|Viž vejad-odžibvelašt (19. voz'sada)]]
 '''Odžibve''' (mugažo '''odžibv''') vai '''čippev''' (''Ojibwe'', ''Ojibwa'', ''Chippewa'', ičeze nügüdläine nimituz: ''Aniššinape'') om [[indejalaižed|indejine]] rahvaz.
 
-Odžibvelaižed elädas [[Kanad]]as i [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] pohjoižes. Lugu om läz 360 tuhad ristituid — enamb 205 tuhad Kanadas i enamb 150 tuhad AÜV:oiš. Pagištas [[odžibven kel'|odžibven]] i [[anglijan kel'|anglijan]] kelil.
+Odžibvelaižed elädas [[Kanad]]as i [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] pohjoižes, rahvahan eziauguine territorii levitase pohjoižhe i päivlaskmha [[Sured järved|Suriš järvišpäi]]. Lugu om läz 360 tuhad ristituid — enamb 205 tuhad Kanadas i enamb 150 tuhad AÜV:oiš. Pagištas [[odžibven kel'|odžibven]] i [[anglijan kel'|anglijan]] kelil.
+
+Odžibve-rahvaz eli laptas evropižen kolonizacijan päčuradusespäi, ka om kaičenus. Vedi sodoid lähižid indejižid rahvahid vaste kolonizacijan aigan eskai. Nügüd'aigan rahvahan kundad elädas äiluguižiš rezervacijoiš, om rahvahan ezitajid lidnoiš-ki. 
+
+Rahvahan kul'turan istorii mülütab tohesižid venehid i turuškoid, [[vas'k]]en samišt da torguindad, mecrisan kul'tiviruindad i [[vahtar]]in siropan sandad. Kaičenus tohesižiš turuškoiš om kirjutadud detaližikš da kompleksižikš neniš azjoiš: aigtegoiden istorii, pajod, kartad, mainitesed, starinad, matematikan i arboiden tedod.
 
 {{Commons|Category:Ojibwa}}
 
