--- a/Odžibven_kel'.mw
+++ b/Odžibven_kel'.mw
@@ -3,6 +3,8 @@
 
 Necil kelel pagištas [[Kanad]]as i [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] pohjoižes. Pagižijoiden lugu om 56,531 ristitud (47,740 Kanadas, 8,791 AÜV:oiš).
 
+Severz'-se sanoid tuli mail'man kelihe odžibven kelespäi, oz., vigvam, totem.
+
 == Tekstan ozutez ==
 === Tekst ===
 # ''Aabiding gii-ayaawag niizh ikwewag: mindimooyenh, odaanisan bezhig.''
