*Empty MediaWiki Message*

--- a/Odžibve_(rahvaz).mw
+++ b/Odžibve_(rahvaz).mw
@@ -6,7 +6,7 @@ Odžibvelaižed elädas [[Kanad]]as i [[Amerikan Ühtenzoittud Valdkundad|AÜV:o
 
 Odžibve-rahvaz eli laptas evropižen kolonizacijan päčuradusespäi, ka om kaičenus. Vedi sodoid lähižid indejižid rahvahid vaste kolonizacijan aigan eskai. Nügüd'aigan rahvahan kundad elädas äiluguižiš rezervacijoiš, om rahvahan ezitajid lidnoiš-ki. 
 
-Rahvahan kul'turan istorii mülütab tohesižid venehid i turuškoid, [[vas'k]]en samišt da torguindad, mecrisan kul'tiviruindad i [[vahtar]]in siropan sandad. Kaičenus tohesižiš turuškoiš om kirjutadud detaližikš da kompleksižikš neniš azjoiš: aigtegoiden istorii, pajod, kartad, mainitesed, starinad, matematikan i arboiden tedod.
+Rahvahan kul'turan istorii mülütab tohesižid venehid i turuškoid, [[vas'k]]en samišt da torguindad, [[mecris]]an kul'tiviruindad i [[vahtar'|vahtarin]] siropan sandad. Kaičenus tohesižiš turuškoiš om kirjutadud detaližikš da kompleksižikš neniš azjoiš: aigtegoiden istorii, pajod, kartad, mainitesed, starinad, matematikan i arboiden tedod.
 
 {{Commons|Category:Ojibwa}}
 
