--- a/.bg.mw
+++ b/.bg.mw
@@ -1,4 +1,6 @@
-'''.bg''' om [[Bolgarii|Bolgarijan]] [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 3. päiväl vilukud.<ref>[http://iana.org/domains/root/db/bg.html IANA — .bg Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.bg''' om [[Bolgarii|Bolgarijan]] [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 3. päiväl vilukud<ref>[http://iana.org/domains/root/db/bg.html IANA — .bg Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Komplimentarine domen om [[.бг]] (vn 2016 heinkuspäi) domennimiden täht kirilližel kirjamištol.
+
+Registracii om lasktud kahtendel i koumandel tazopindoil. Evropan Ühtištusen rahvahanikad da kompanijad voidas registriruida domennimed, mugažo verazmaižed kompanijad kommertiženke alajagusenke, mitte om registriruidud Bolgarijas. Maksmine domennimen registracijas i tehnižes pid'oitelendas om €12 vodes.
 
 == Homaičendad ==
 <references />
