--- a/.bg.mw
+++ b/.bg.mw
@@ -2,12 +2,17 @@
 
 Registracii om lasktud kahtendel i koumandel tazopindoil. Evropan Ühtištusen rahvahanikad da kompanijad voidas registriruida domennimed, mugažo verazmaižed kompanijad kommertiženke alajagusenke, mitte om registriruidud Bolgarijas. Maksmine domennimen registracijas i tehnižes pid'oitelendas om €12 vodes.
 
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''fam.bg''' — personad
+* '''.info.bg''' — informacižed saitad.
+
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
 * [http://www.register.bg/ Domenan sait (''register.bg'')] {{ref-bg}} {{ref-en}}, ohjandab «Register.BG Ltd.»-organizacii
 * [http://iana.org/domains/root/db/bg.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.bg}}
 
 {{CcTLD}}
 
