--- a/.bg.mw
+++ b/.bg.mw
@@ -3,7 +3,7 @@
 Registracii om lasktud kahtendel i koumandel tazopindoil. Evropan Ühtištusen rahvahanikad da kompanijad voidas registriruida domennimed, mugažo verazmaižed kompanijad kommertiženke alajagusenke, mitte om registriruidud Bolgarijas. Maksmine domennimen registracijas i tehnižes pid'oitelendas om €12 vodes.
 
 Kahtenden tazopindan reglamentiruidud domenad:
-* '''fam.bg''' — personad
+* '''.fam.bg''' — personad
 * '''.info.bg''' — informacižed saitad.
 
 == Homaičendad ==
