--- a/.et.mw
+++ b/.et.mw
@@ -1,4 +1,7 @@
-'''.et''' om [[Efiopii|Efiopijan]] [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 15. päiväl redukud.<ref>[http://iana.org/domains/root/db/et.html IANA — .et Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+[[Fail:DotET domain logo (custom).svg|thumb|right|250px|Domenan logotip]]
+'''.et''' om [[Efiopii|Efiopijan]] [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 15. päiväl redukud<ref>[http://iana.org/domains/root/db/et.html IANA — .et Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domenal om röunatud kävutand Efiopijan territorijal.
+
+Registracii om lasktud koumandel tazopindal. Tehnine pid'oitelend tegese [[Kitai]]špäi.
 
 == Homaičendad ==
 <references />
