--- a/.et.mw
+++ b/.et.mw
@@ -1,13 +1,22 @@
 [[Fail:DotET domain logo (custom).svg|thumb|right|250px|Domenan logotip]]
 '''.et''' om [[Efiopii|Efiopijan]] [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 15. päiväl redukud<ref>[http://iana.org/domains/root/db/et.html IANA — .et Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domenal om röunatud kävutand Efiopijan territorijal.
 
-Registracii om lasktud koumandel tazopindal. Tehnine pid'oitelend tegese [[Kitai]]špäi.
+Registracii om lasktud koumandel tazopindal. Valdkundan Internetan tehnine pid'oitelend tegese [[Kitai]]špäi.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.com.et''' — kommertižed kompanijad
+* '''.gov.et''' — valdkundaližed organad
+* '''.org.et''' — kommertižetomad organizacijad
+* '''.edu.et''' — opendusen aluzkundad
+* '''.net.et''' — verkoihe sidodud kompanijad
+* '''.name.et''' — personad
+* '''.mil.et''' — Efiopijan Rahvahaližed azekhad väged.
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://www.ethiotelecom.et/ Domenan sait — Efiopijan kommunikacijoiden korporacii (''ethiotelecom.et'').] {{ref-en}} {{ref-am}}
+* [http://myportal.ethiotelecom.et/ Domenan registracijan sait — Efiopijan kommunikacijoiden korporacii (''myportal.ethiotelecom.et'', [[Addis-Abeb]]).] {{ref-en}} {{ref-am}}
 * [http://iana.org/domains/root/db/et.html IANA-informacii (''iana.org'').] {{ref-en}}
 
 {{CcTLD}}
