*Empty MediaWiki Message*

--- a/.et.mw
+++ b/.et.mw
@@ -18,6 +18,7 @@ Kahtenden tazopindan reglamentiruidud domenad:
 == Irdkosketused ==
 * [http://myportal.ethiotelecom.et/ Domenan registracijan sait — Efiopijan kommunikacijoiden korporacii (''myportal.ethiotelecom.et'', [[Addis-Abeb]]).] {{ref-en}} {{ref-am}}
 * [http://iana.org/domains/root/db/et.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.et}}
 
 {{CcTLD}}
 
