--- a/Angolan_valdkundznam.mw
+++ b/Angolan_valdkundznam.mw
@@ -2,7 +2,7 @@
 '''Angolan valdkundznam''' ({{lang-pt|Brasão de armas de Angola}}) om [[Angolan Tazovaldkund]]an üks' oficialižiš simvolišpäi. Se om vahvištadud vn 1990 2. päiväl kül'mkud vn [[1975]] versijan alusel.
 
 == Ümbrikirjutand ==
-Voib löuta valdkundznaman kaluid [[Angolan flag]]al. Mačete om ristikoittud kokšunke znaman keskuses. Kuldaine vižagjaine tähtaz kuvadase niiden päl nouzijan rusttan päiväižen sädegiš sinivauvhal tagamal diskan nägul. Disk om röunatud kirbil kukruzas, kofes i puvillaspäi ühtendes poles, piikezran palal kahtendes poles. Hobed kirj om pandud avoinudel znaman alahan, sigä-žo kuldaine lent om valdkundan nimitusenke portugalijan kelel (''República de Angola''). Edel vn 1990 tal'vkud valdkundan täuz' nimituz i kirjutez oliba toižin.
+Voib löuta valdkundznaman kaluid (mačete i piikezran pala) [[Angolan flag]]al. Mačete om ristikoittud kokšunke znaman keskuses. Kuldaine vižagjaine tähtaz kuvadase niiden päl nouzijan rusttan päiväižen sädegiš sinivauvhal tagamal diskan nägul. Disk om röunatud kirbil kukruzas, kofes i puvillaspäi ühtendes poles, piikezran palal kahtendes poles. Hobed kirj om pandud avoinudel znaman alahan, sigä-žo kuldaine lent om valdkundan nimitusenke portugalijan kelel (''República de Angola''). Edel vn 1990 tal'vkud valdkundan täuz' nimituz i kirjutez oliba toižin.
 
 {{Commons|Category:Coats of arms of Angola}}
 
