--- a/Angolan_valdkundznam.mw
+++ b/Angolan_valdkundznam.mw
@@ -7,7 +7,7 @@ Voib löuta valdkundznaman kaluid (mačete i piikezran pala) [[Angolan flag]]al.
 Edel vn 1990 tal'vkud valdkundan täuz' nimituz i kirjutez oliba toižin.
 
 == Edeližed valdkundznamad ==
-<gallery>
+<gallery mode="packed" heights="125px">
 Coat of arms of Portuguese West Africa (1935-1951).svg|Portugaližen Angol-kolonijan znam (1935−1951)
 Coat of arms of Portuguese West Africa (1951-1975).svg|Portugaližen Angol-provincijan znam (1951−1975)
 Emblem of the People's Republic of Angola (1975-1992).png|Angolan Rahvahaližen Tazovaldkundan valdkundznam (1975−1992)
