--- a/Kupino_(Novosibirskan_agj).mw
+++ b/Kupino_(Novosibirskan_agj).mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Kupino<br />Купино
- | Lidnanznam =
+ | Lidnanznam = Kupino COA (2011).gif
  | Flag = Flag of Kupino (Novosibirsk oblast).png
- | Lidnanznam text =
+ | Lidnanznam text = Kupinon lidnanznam
  | Flag text = Kupinon flag
  | Valdkund = Venäma
- | Eläjiden lugu = 13,781
- | Voz' = 2017
+ | Eläjiden lugu = 13,711
+ | Voz' = 2021
  | Pind = 30.08
  | Fail =
  | Pämez' = Anatolii Ševčenko<br />(tal'vku 2015—)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1886. Vl 1915 raudte ühtenzoiti žilod [[Transsib]]anke ([[Tatarsk]]-lidn), kävutihe vemha villäd. Žilo sai lidnan statusad vl 1944.
 
-Lidn šingotase vagonoiden kohenduzkompanijal, maidtegimel i jähižen edheotandal.
+Kupino šingotase [[vagon]]oiden kohenduzkompanijal, maidtegimel i [[jähine|jähižen]] edheotandal.
 
 == Geografijan andmused ==
 Lidn sijadase 115 m ü.m.t. keskmäižel korktusel. Nell' pen't järved sijadasoiš lidnan suves. Matkad [[Kazahstan]]an röunhasai om 30 km päivlaskmha orhal, [[Novosibirsk]]hasai om 368 km päivnouzmha orhal, 480 km avtotedme vai raudtedme. Lähembaine lidn om [[Karasuk (lidn)|Karasuk]] 85 km suvipäivnouzmha orhal, 96 km avtotedme vai raudtel.
@@ -27,14 +27,18 @@ Lidn sijadase 115 m ü.m.t. keskmäižel korktusel. Nell' pen't järved sijadaso
 Kupino om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 15 400 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 23 185 eläjad vl 1959. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om olmas lidnas: Luka-evangelistan i Sündun Toižetamižen jumalanpertid.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 15 400 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 23 185 eläjad vl 1959.
 
-Professionaližen opendusen aluzkundad: Kupinon medicinine tehnikum i rajonidenkeskeine agrarine licei.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid<ref>[http://sobory.ru/geo/locat/14373 Kupinon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref><ref>[https://www.pravkarasuk.ru/?p=287 Kupino — Sündun Toižetamižen pühäpert' eparhijan ''pravkarasuk.ru''-saital.] {{ref-ru}}</ref> om olmas lidnas: Luka-evangelistan i Sündun Toižetamižen jumalanpertid.
+
+Professionaližen opendusen aluzkundad: Kupinon medicinine tehnikum<ref>[http://kupino-kmt.edusite.ru/ Kupinon medicinižen tehnikuman sait (''kupino-kmt.edusite.ru'').] {{ref-ru}}</ref> i rajonidenkeskeine agrarine licei.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://www.admkupino.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admkupino.ru'').] {{ref-ru}}
+* [http://admkupino.nso.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admkupino.nso.ru'').] {{ref-ru}}
 * [http://kupino.gorsite.ru/ Lidnan informacine sait (''kupino.gorsite.ru'').] {{ref-ru}}
-{{Commons|Category:Kupino}}
 
 {{Novosibirskan agjan lidnad}}
 
