--- a/Kupino_(Novosibirskan_agj).mw
+++ b/Kupino_(Novosibirskan_agj).mw
@@ -38,7 +38,7 @@ Professionaližen opendusen aluzkundad: Kupinon medicinine tehnikum<ref>[http://
 
 == Irdkosketused ==
 * [http://admkupino.nso.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admkupino.nso.ru'').] {{ref-ru}}
-* [http://kupino.gorsite.ru/ Lidnan informacine sait (''kupino.gorsite.ru'').] {{ref-ru}}
+* [http://gorsite.ru/Regions/kupino/ Lidnan lehtpoled informacižel ''gorsite.ru''-saital.] {{ref-ru}}
 
 {{Novosibirskan agjan lidnad}}
 
