--- a/Novosibirsk.mw
+++ b/Novosibirsk.mw
@@ -6,40 +6,51 @@
  | Lidnanznam text = Novosibirskan lidnanznam
  | Flag text = Novosibirskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 1,618,039<ref>[http://www.gks.ru/free_doc/doc_2019/bul_dr/mun_obr2019.rar Novosibirskan ristitišt vn 2019 1. päiväl vilukud. — Rosstat (''gks.ru'').] {{ref-ru}}</ref>
- | Voz' = 2019
- | Pind = 507.2
- | Fail = Novosibirsk Downtown.jpg
+ | Eläjiden lugu = 1,620,162<ref>[https://rosstat.gov.ru/storage/mediabank/MZmdFJyl/chisl_MO_Site_01-01-2021.xlsx Venälaižen Federacijan kaikenaigaižen ristitišton lugu municipalitetoidme vn 2021 1. päiväl vilukud. — ''Rosstat.gov.ru''.] {{ref-ru}}</ref>
+ | Voz' = 2021-01-01
+ | Pind = 502.7
+ | Fail = NSK Montage 2017.png
  | Pämez' = [[Lokot' Anatolii|Anatolii Lokot']]<br />(sulaku 2014—)
  | Telefonkod = +7-383-xxx-xxxx
  | Avtokod = 54. 154
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-[[Fail:Novosibirsk, Russia, satellite image, LandSat-5, 2010-09-08.jpg|thumb|left|200px|Novosibirsk da sen ezilidnad vl 2010 (nägu kaimdajaspäi).]]
-'''Novosibirsk''' ({{lang-ru|Новосибирск}}) om [[Venäma]]n millionerlidn, lidnümbrik da koumanz' lidn eläjiden lugun mödhe, sijadase [[Sibir'|Sibirin]] suvipäivlaskmas. Om [[Novosibirskan agj]]an i sen [[Novosibirskan rajon]]an administrativine keskuz da kaikiš suremb lidn, mugažo [[Sibirin federaline ümbrik|Sibirin federaližen ümbrikon]] pälidn.
+[[Fail:Novosibirsk, Russia, satellite image, LandSat-5, 2010-09-08.jpg|thumb|left|200px|Novosibirsk da sen ezilidnad vl 2010 (nägu kaimdajaspäi)]]
+'''Novosibirsk''' ({{lang-ru|Новосибирск}}, suline lühenduz ''Новосиб / Novosib'') om [[Venäma]]n millionerlidn, lidnümbrik da koumanz' lidn eläjiden lugun mödhe, sijadase [[Sibir'|Sibirin]] suvipäivlaskmas. Om [[Novosibirskan agj]]an i sen [[Novosibirskan rajon]]an administrativine keskuz da kaikiš suremb lidn, mugažo [[Sibirin federaline ümbrik|Sibirin federaližen ümbrikon]] pälidn.
 
 == Istorii ==
 [[Fail:Районы Новосибирска.png|thumb|left|200px|Lidnan rajonad:<br/>{{legend|silver|Dzeržinskijan rajon}} {{legend|orange|Raudteiden rajon}} {{legend|fuchsia|El'covkantagaine rajon}} {{legend|purple|Kalininan rajon}} {{legend|yellow|Kirovan rajon}} {{legend|grey|Leninan rajon}} {{legend|lime|Oktäbrin rajon}} {{legend|green|Pervomain rajon}} {{legend|aqua|Nevondkundaline rajon}} {{legend|red|Keskuzrajon}}]]
 Eländpunktan aluz om pandud vn 1893 30. päiväl sulakud ''Aleksandrovskii-žiloks'' sauvomha da holitamha [[Transsib]]ad. Vll 1895−1903 udesnimitihe ''Novonikolajevskijaks''. Se sai lidnan statusad vn 1903 28. päiväl tal'vkud i edel 1926 vot lidnan nimi oli '''Novonikolajevsk''' ({{lang-ru|Ново-Николаевск}}).
 
-Novosibirsk šingotase importtavaroiden möndal tukuil (logistine keskuz 20 km²), raudan metallurgijal, metallan ümbriradmižel, mašiništonsauvomižen tegimil, sauvondmaterialiden pästandal (stökol) i sömtegimištol, mugažo järedaks tedokeskuseks.
+Novosibirsk šingotase importtavaroiden möndal tukuil (logistine keskuz 20 km²), [[raud]]an metallurgijal, metallan ümbriradmižel, mašiništonsauvomižen tegimil, sauvondmaterialiden pästandal ([[stökol]]) i sömtegimištol, mugažo järedaks tedokeskuseks.
 
 == Geografijan andmused ==
 Lidn sijadase [[Ob' (jogi)|Ob'-jogen]] molembil randoil, 150 m ü.m.t. keskmäižel korktusel. Hura randpol' om tazo, oiged om vanoikaz, [[Novosibirskan vezivaradim]] sijadase ülezjogen. Matkad [[Moskv]]hasai om 3000 km päivlaskmha orhal. Lähembaižed lidnad mülüdas Novosibirskan aglomeracijha (2,1 mln rist. vl 2018), ned oma [[Berdsk]] i [[Iskitim]] suvhe, [[Ob' (lidn)|Ob']] päivlaskmha. Voib olda penid 2..3-ballaižid manrehkaidusid (12-ballaižen Rihteran pordhišton mödhe).
 
-Novosibirsk om lidnümbrikon üks'jäine eländpunkt i jagase 10 administrativižhe rajonha. Ned ei olgoi municipaližikš ühtnikoikš, no kaikutte om ičeze administracijanke päiči El'covkantagaižes, Raudteiden i Keskuzrajonas, niiden administracii om ühthine Keskuzümbrikon.
+Novosibirsk om lidnümbrikon üks'jäine eländpunkt i jagase kümneks administrativižeks rajonaks. Ned ei olgoi municipaližikš ühtnikoikš, no kaikutte om ičeze administracijanke päiči El'covkantagaižes, Raudteiden i Keskuzrajonas, niiden administracii om ühthine Keskuzümbrikon.
 
 == Eläjad da transport ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 1 473 754 ristitud. Kaikiš suremb ristitišt om nügüd'.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 1 473 754 ristitud. Kaikiš suremb ristitišt oli 1 625 631 eläjad vl 2020.
 
-Avtobusad, trolleibusad, tramvaid, ezilidnelektrojonused da taksid oma kundaližeks transportaks. Vspäi 1986 metro radab lidnas (kaik om 2 jonod, 13 stancijad da 15,9 km raudted vl 2018). Koume avtotesildad da kaks' raudtesildad om saudud Obiš päliči. Jogiport om olmas lidnas. Rahvahidenkeskeine civiline ''Tolmačovo''-lendimport (''OVB/ТЛЧ'') sijadase 17 km päivlaskmha lidnan keskusespäi [[Ob' (lidn)|Ob'-lidnan]] röunal, tehtas reisid Evropan, Päivnouzmaižen Azijan (jügureisid tobjimalaz) i Keskuzazijan maihe, mugažo Venämadme i čarterrreisid [[Tailand]]ha.
+Avtobusad, trolleibusad, tramvaid, ezilidnelektrojonused da taksid oma kundaližeks transportaks. Vspäi 1986 metro radab lidnas (kaik om kaks' jonod, 13 stancijad da 15,9 km raudted vl 2018). Koume avtotesildad da kaks' raudtesildad om saudud Obiš päliči. Jogiport om olmas lidnas. Rahvahidenkeskeine civiline ''Tolmačovo''-lendimport (''OVB/ТЛЧ'') sijadase 17 km päivlaskmha lidnan keskusespäi [[Ob' (lidn)|Ob'-lidnan]] röunal, tehtas reisid Evropan, Päivnouzmaižen Azijan (jügureisid tobjimalaz) i Keskuzazijan maihe, mugažo Venämadme i čarterrreisid [[Tailand]]ha.
 
 == Lidnan nägud ==
 <center><gallery widths=175>
-Fail:Новосибирск, Титова 31.jpg|Uded pertid Stanislavskijan torgul
-Fail:Lenina street.JPG|Leninan-ird
-Fail:Новосибирский вокзал.jpg|Novosibirsk-päraudtestancijan sauvuz
-Fail:Spartak stadium (Novosibirsk).jpg|«Spartak»-stadion Novosibirskas
+Novosibirsk - panoramio (11).jpg|Lidnan merii (2014)
+Novosibirsk Downtown.jpg|Lidnan keskuzpalas (2013)
+Новосибирск, Титова 31.jpg|Uded pertid Stanislavskijan torgul (2008)
+Voznes sobor.jpg|Sündun Voznesenjan kafedraline päjumalanpert', vn 2011 nägu
+Новосибирская ТЭЦ-5.jpg|Novosibirskan LEK-5
+Здание Новосибирского оловокомбината и проходная.JPG|Tinkombinat i sen tulend vl 2011
+Административное здание завода "Электроагрегат".jpg|«Elektroagregat»-tegimen kontor vl 2011
+NSU new building.jpg|Novosibirskan valdkundaline universitet, uz' sauvuz (2015)
+Nstu-1.jpg|Novosibirskan valdkundaline tehnine universitet, 1. korpus (2008)
+Arnold Kats State Concert Hall.jpg|Valdkundaline koncertzal Arnol'd Kacan nimed, Novosibirskan filarmonii (2013)
+Novosibirsk Kamenskaya 1.jpg|«Globus»-teatr (2006)
+ТРЦ Ройял Парк.jpg|«Rojal Park»-torguimižbobuštuzkeskuz (2008)
+Spartak stadium (Novosibirsk).jpg|«Spartak»-stadion Novosibirskas
+Новосибирский метромост.jpg|Novosibirskan metrosild vn 2021 vilukus
+Новосибирский вокзал.jpg|Novosibirsk-Päine-päraudtestancijan sauvuz vn 2015 augotišes
 </gallery></center>
 
 == Sebruzlidnad ==
