--- a/Novosibirsk.mw
+++ b/Novosibirsk.mw
@@ -6,7 +6,7 @@
  | Lidnanznam text = Novosibirskan lidnanznam
  | Flag text = Novosibirskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 1,620,162<ref>[https://rosstat.gov.ru/storage/mediabank/MZmdFJyl/chisl_MO_Site_01-01-2021.xlsx Venälaižen Federacijan kaikenaigaižen ristitišton lugu municipalitetoidme vn 2021 1. päiväl vilukud. — ''Rosstat.gov.ru''.] {{ref-ru}}</ref>
+ | Eläjiden lugu = 1,620,162<ref>[https://rosstat.gov.ru/storage/mediabank/MZmdFJyI/chisl_МО_Site_01-01-2021.xlsx Venälaižen Federacijan kaikenaigaižen ristitišton lugu municipalitetoidme vn 2021 1. päiväl vilukud. — ''Rosstat.gov.ru''.] {{ref-ru}}</ref>
  | Voz' = 2021-01-01
  | Pind = 502.7
  | Fail = NSK Montage 2017.png
@@ -48,7 +48,8 @@ Nstu-1.jpg|Novosibirskan valdkundaline tehnine universitet, 1. korpus (2008)
 Arnold Kats State Concert Hall.jpg|Valdkundaline koncertzal Arnol'd Kacan nimed, Novosibirskan filarmonii (2013)
 Novosibirsk Kamenskaya 1.jpg|«Globus»-teatr (2006)
 ТРЦ Ройял Парк.jpg|«Rojal Park»-torguimižbobuštuzkeskuz (2008)
-Spartak stadium (Novosibirsk).jpg|«Spartak»-stadion Novosibirskas
+Spartak stadium (Novosibirsk).jpg|«Spartak»-stadion (2008)
+Tolmachevo terminal internazionale.jpg|Tolmačovo-lendimportan rahvahidenkeskeine terminal vl 2006
 Новосибирский метромост.jpg|Novosibirskan metrosild vn 2021 vilukus
 Новосибирский вокзал.jpg|Novosibirsk-Päine-päraudtestancijan sauvuz vn 2015 augotišes
 </gallery></center>
