/* Päčihe sidotud vepsän muštatišed da ozoitesed */ +

--- a/Päč.mw
+++ b/Päč.mw
@@ -75,7 +75,7 @@ Ku pertiš om karzin, se päč om seibhiš. Läz päčid om karzinlaud (karzinla
 * ''Siga'' — form löndpäčin südäimen tegemižen täht.
 * ''Topmač, tučmar''' — radkalu päčin löndan täht.
 
-== Päčihe sidotud vepsän muštatišed da ozoitesed ==
+== Päčihe sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Poig lajib — libu päčile, vävu lajib — kacu, kus uks' om.''
@@ -89,6 +89,7 @@ Ku pertiš om karzin, se päč om seibhiš. Läz päčid om karzinlaud (karzinla
 * Lehm seižub tanhal, sar'ved irdal (päč lämptäb).
 * Must härgaine om lujas joll'akaz, hot' äjak vet anda, ka kaiken job (küuduk).
 * Om pertiš kondi, ken pert'he tulob, kaikuččele andab kät (päč).
+* Ukoine libub päčile, korond perskes (kaži).
 </blockquote>
 
 == Galerei ==
