*Empty MediaWiki Message*

--- a/Päč.mw
+++ b/Päč.mw
@@ -55,7 +55,7 @@ Nevest, prostides kodinke, tuli da kosketi päč, pakiči sil armastust. Konz' n
 
 Ku pertiš om karzin, se päč om seibhiš. Läz päčid om karzinlaud (karzinlava).
 
-== Päčihe sidotud tärtused ==
+== Päčihe sidodud tärtused ==
 === Azeged päčiš ümbri ===
 * ''Kaugedraudaine astii (Čugun)''.
 * ''Kouk''.
