--- a/Lämoi.mw
+++ b/Lämoi.mw
@@ -17,7 +17,7 @@ Lämoin samižen mahtusen avaiduz tegihe aigaližes [[paleolit]]as völ kividen 
 
 Eziauguižešti ottihe lämoid kävutamižhe savun samižen täht lendajid gavedid vaste, i vaiše sen jäl'ghe amuižed ristitud löutihe lämoin ledeks kulinarijan funkcijanke. Savukurdihe sömäd, sid' zavottihe räkištada avoinudel lämudel i paštta hiliš. Keitand om melestehtud [[neolit]]an aigan keramikastjoidenke ühtes.
 
-== Lämoihe sidodud vepsän muštatiž ==
+== Lämoihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Lämoid savuta ei olele.''
 * ''Palanu lämoid ei varaida, a upnu — vet.''
