--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -5,7 +5,7 @@
 Irdnägu (eksterjer), seiniden material, eländkodin südäin oma lujas erazvuiččed. Mugomad materialad kut [[pu (material)|pu]], [[brezent]], [[londuseline kivi|kivi]], [[beton]], [[mahuz|ma]], [[savič]], [[teraz]], [[stökol]], eskai [[lu]] da [[lumi]], kävutadas sauvomha kodid.
 
 == Nügüd'aigaižen eländkodin sündundan istorii ==
-[[Fail:Old believers house.JPG|thumb|right|250px|Pert' sväzinke ([[Baikalantagaine rand]]).]]
+[[Fail:Old believers house.JPG|thumb|right|250px|Pert' sväzinke ([[Baikalantagaine rand]])]]
 Ristitud kävutadas eländkodid [[istorijanedeline aig|istorijanedeližes aigaspäi]] Eziauguižin erazvuiččed [[kar (mägiš)|karad]] da [[grot]]ad oliba kodikš. Sikš ku londuseližed eländsijad ei voinugoi täutta amuižiden mehiden kaikid tahtoid, ka zavodihe lattä niid: eländlavad kivitihe, letihe kiviaidoid. [[Zemlänk]] da [[butkaine]] oliba ristituiden kaikiš amuižembikš eländkodikš tazangištoil.
 
 Klimatan vajehtused, vilugoitusen pordod, uziden maiden otand kävutamižhe — kaiken necen tagut mehed sauvoškanziba eländkodid aktivižemb. Ezmäi pud da [[mamont]]oiden lud oliba radmaterialikš eriližen instrumentan olmatomuden taguiči. [[Neolit]]an aigan sauvoškanzihe ezmäižid eländkodid necen sanan nügüd'aigaižen znamoičendan mödhe. Eländsauvond oli zavottud erazvuiččel aigal sijihe i kul'turoihe kacten. Eländkodi oli ühten kehkran vai nellikhonusen [[lezi|ledenke]] keskes da reigunke savule lähtemha ülähäks pohjoižembaižiš regionoiš soraviden tal'videnke. Erašti mugoižes eländkodiš ristitud öduiba ühtes ičeze kabjživatoidenke.
@@ -31,7 +31,7 @@ Tegimištkukerduz vei lidnalaižen eländkodin küzumižen heredale ližadusele:
 
 [[Sur' Britanii|Sures Britanijas]] tegimiden da fabrikoiden ližadusen mödhe eländkodin tarbhaižuz sündui radnikoiden ogibalan lugun täht. Odvemha i pigustamha sauvondad zavodihe leta kaiktä da äjin blokiruidud ühthe pertid elämižen täht (niid panihe rivihe, ühthižiden seinidenke). Pertid sauvoihe ühtejiččen irdnägunke, savučuspäi kaks'žiruižed: alahan — keitimpol' päčinke kivihilel, lähtendad irdale da pen'he sadhu; ülähän — üks'jäine eländhonuz, üks' kaikiden täht.
 
-[[Fail:Varassaari5.JPG|thumb|left|250px|Järgeline suomalaine pert' 20. voz'sadan augotišespäi, [[Jüväskülä]], [[Suomenma]].]]
+[[Fail:Varassaari5.JPG|thumb|left|250px|Järgeline suomalaine pert' 20. voz'sadan augotišespäi, [[Jüväskülä]], [[Suomenma]]]]
 Sil-žo aigal [[erižpert']] oli päpaloin eländkodikš [[buržuazii|buržuazijan]] täht. Sündujan keskklassan da intelligencijan täht sauvoihe penid [[kottedž]]id.
 
 Vozil 1920-1930 avtomobilizacii zavodihe šingotadud maiš, se vei [[ezilidn]]oiden kazmižhe, [[AÜV|AÜV:oiš]] eriližešti.
@@ -174,12 +174,17 @@ Erased živatad saudas eländkodid iče vai kävutadas jo olijoid kodid kaičemh
 |}
 
 == Galerei ==
-<center><gallery>
-Fail:Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
-Fail:Димитрова 70.JPG|Kaks'toštkümnežiruine eländpert' Venämas
-</gallery></center>
+<gallery mode="packed" heights="125px">
+Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
+Димитрова 70.JPG|Kaks'toštkümnežiruine eländpert' Venämas
+</gallery>
 
-== Kc. mugažo ==
+== Eländkodihe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Pert' tehmata ei tule.''
+</blockquote>
+
+== Kacu mugažo ==
 * [[Vepsläižen kodin südäin]]
 * [[Vepsän eländkodi]]
 
