/* Sömhä sidodud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -18,6 +18,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Ei luzik söta.''
 * ''En olend sönu – emboinu, a söin da en ni sijaspäi.''
 * ''Heimod om äi, söda ei kus.''
+* ''Hüvä pudr, da penehk stauč.''
 * ''Kelel päd ed söta.''
 * ''Ken aigoiš libui, se i söi, a ken möhäs libui, se luzikan noli.''
 * ''Keza keradab, a tal'v söb.''
