/* Eloho sidotud vepsän muštatišed */ +

--- a/Elo.mw
+++ b/Elo.mw
@@ -18,6 +18,7 @@ Man irdpolel elo ei löudand, kosmine biologii tedoidab sen tundusid da gipoteti
 <blockquote>
 * ''Ala varaida kolnut, varaida eläbad.''
 * ''Elo meleta kuti puzu reigunke.''
+* ''Eraz eläb, ku puzuhu paneb, a toine eläb, ku märgän mecan poltab.''
 * ''Igän eläd, igän openud.''
 * ''Ken hätken eläb, se enamban nägeb.''
 </blockquote>
