--- a/Sobad.mw
+++ b/Sobad.mw
@@ -87,9 +87,10 @@ Uniform om märitud büdžetorganizacijoiden radnikoiden da valdkundmehiden täh
 | 54
 |}
 
-== Sobihe sidodud vepsän muštatiž ==
+== Sobihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Pen' Makaraine kaikid sobitab (negl).''
+* ''Sömäta joksed läbi pöudos, a alasti ei sa.''
 </blockquote>
 
 == Kacu mugažo ==
