*Empty MediaWiki Message*

--- a/Pöud_(maižanduz).mw
+++ b/Pöud_(maižanduz).mw
@@ -3,7 +3,7 @@
 [[Fail:Van Gogh Wheat-Fields-at-Auvers-Under-Clouded-Sky July 1890.jpg|thumb|right|250px|[[Vinsent van Gog]]. Nižun pöudod läz Auversad pil'vekahan taivhan al, heinku 1890]]
 '''Pöud''' om laged (mecatoi), tazo da avar paksus [[mapala|uma]] [[maižanduz|maižandusen]] täht, [[nit]]uiden, [[sad]]uiden da [[omaluine|omaluižiden]] kartte.
 
-== Pöudho sidotud vepsän tärtused ==
+== Pöudho sidodud vepsän tärtused ==
 * ''Kertta'' — küntta mad tošti.
 * ''Kündatez'' — künttud pöud.
 * ''Leta ma'' — küntta pöud tal'veks.
@@ -35,7 +35,7 @@ Semetomad [[künttud ma|künttud mad]] jädas erašti [[kezand]]aks. Kaks'pöudo
 
 Tahon mapalad [[vinmarj]]oid da [[humal]]id kazvatamha oma mugažo pöudoiden toižendad.
 
-== Pöudho sidotud vepsän muštatišed da ozoitesed ==
+== Pöudho sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Aidatomha pöudho kaikutne živat tuleb.''
