/* Sömhä sidodud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -35,6 +35,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Sö kromaine, ka linned priha čomaine.''
 * ''Söid kut siga, läksid kut koza.''
 * ''Söm mehen kandišeb.''
+* ''Sömäta joksed läbi pöudos, a alasti ei sa.''
 </blockquote>
 
 == Homaičendad ==
