/* Sömhä sidodud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -31,6 +31,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 * ''Mitte samine, mugoi i sömine.''
 * ''Nagrižpirgas eile sömäd, nekrutas eile oluhad.''
+* ''Rad radon sijas, a sönd — söndan sijas.''
 * ''Sö čomad lent i pida čomad mel't.''
 * ''Sö kromaine, ka linned priha čomaine.''
 * ''Söid kut siga, läksid kut koza.''
