--- a/Elankur.mw
+++ b/Elankur.mw
@@ -9,11 +9,11 @@
  | Voz' = 2016
  | Pind = 9.79
  | Fail = Elancourt Commanderie bâtiment ouest.JPG
- | Pämez' = 
+ | Pämez' = Žan-Mišel' Furže<br />(sulaku 1996 — mandat 2026)
  | Telefonkod = 
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Elankur''' ({{lang-fr|Élancourt}}) om [[Francii|Francijan]] lidn da kommun [[Il'-de-Frans]]-regionas, sen [[Ivelin]]-departamentas.
+'''Elankur''' ({{lang-fr|Élancourt}} [elɑ̃kuʁ]) om [[Francii|Francijan]] lidn da kommun [[Il'-de-Frans]]-regionas, sen [[Ivelin]]-departamentas.
 
 Lidn sijadase valdkundan pohjoižes, 100..175 m ü.m.t. keskmäižel korktusel. Matkad [[Pariž]]an keskushesai om 30 km päivnouzmha.
 
