--- a/Elankur.mw
+++ b/Elankur.mw
@@ -5,12 +5,12 @@
  | Lidnanznam text = Elankuran lidnanznam
  | Flag text = 
  | Valdkund = Francii
- | Eläjiden lugu = 25,529
- | Voz' = 2016
+ | Eläjiden lugu = 25,624
+ | Voz' = 2019
  | Pind = 9.79
  | Fail = Elancourt Commanderie bâtiment ouest.JPG
- | Pämez' = Žan-Mišel' Furže<br />(sulaku 1996 — mandat 2026)
- | Telefonkod = 
+ | Pämez' = Žan-Mišel' Furgus<br />(sulaku 1996—,<br/>mandat 2020−2026,<br/>''Jean-Michel Fourgous'')
+ | Telefonkod = +33-
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
 '''Elankur''' ({{lang-fr|Élancourt}} [elɑ̃kuʁ]) om [[Francii|Francijan]] lidn da kommun [[Il'-de-Frans]]-regionas, sen [[Ivelin]]-departamentas.
