--- a/Elankur.mw
+++ b/Elankur.mw
@@ -13,9 +13,20 @@
  | Telefonkod = +33-
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Elankur''' ({{lang-fr|Élancourt}} [elɑ̃kuʁ]) om [[Francii|Francijan]] lidn da kommun [[Il'-de-Frans]]-regionas, sen [[Ivelin]]-departamentas.
+'''Elankur''' ({{lang-fr|Élancourt}} [elɑ̃kuʁ]) om [[Francii|Francijan]] lidn da kund (kommun) [[Il'-de-Frans]]-regionas, sen [[Ivelin]]-departamentas. Mülüb [[Pariž]]an lidnaglomeracijha.
 
-Lidn sijadase valdkundan pohjoižes, 100..175 m ü.m.t. keskmäižel korktusel. Matkad [[Pariž]]an keskushesai om 30 km päivnouzmha.
+== Etimologii ==
+Ezmäine ''Elan''-element sel'gitase saksan Agilenus-antroponiman (fr. Aglin) suližel toižetamižel, voib jäl'gestada sidä dokumentoiš 11. voz'sadaspäi. Lopuline -''court'' ({{lang-la|cōrtem}}) znamoiči «tanaz», «aidoitud ižanduz», «küläusadib».
+
+Kogonaine nimituz kändase «Aglinan aidoitud futor», «Aglinan maižanduz». Fermeruz oli Elankuran eläjiden radmižen 20. voz'sadahasai.
+
+== Istorii ==
+Voz'sadoiš Elankur oli küläks i žiloks vähemb mi tuha eläjiden lugunke. Privatižed sauvondkompanijad zavodiba leta pertid 1970-nzil vozil Parižan «uden lidnan» koncepcijan ramuziš, i ristitišt ližadui kümenikoid kerdoid. Ei jänd erigoittud külid lidnankundas.
+
+== Geografijan andmused ==
+Lidn sijadase valdkundan pohjoižes, 100..175 m ü.m.t. keskmäižel korktusel. Matkad [[Pariž]]an keskushesai om 30 km päivnouzmha, [[Versal'|Versalihesai]] om 16 km päivnouzmha.
+
+Kaks' raudtestancijad oma läz lidnad lähižiš kundoiš.
 
 Vn 2011 Francijan rahvahanlugemižen mödhe eläjiden lugu oli 26 389 ristitud. Kaikiš suremb ristitišt oli 27 577 eläjad vl 2006.
 
